# 3-python-package-exercise-namelessss

./: .gitignore  LICENSE.txt  Pipfile  README.md  example.py  pyproject.toml  requirements.txt  savegame.json  setup.py
new_york_minute/: __init__.py  _init_.py  game.py  player.py  utils.py
src/: setup.py
src/.github/workflows/: python-package.yml
src/new_york_minute/: __main__.py  _init_.py  events.py  game.py  player.py  utils.py
src/tests/: _init_.py  test_new_york_minute.py
tests/: _init_.py  test_new_york_minute.py
