[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "new_york_minute"
description = "Text-based, choose your own adventure game. The characters are just moving into NYC, win by achieving your dreams."
version = "0.0.1"
authors = [
    {name="Hannah Horiuchi", email="hah8236@nyu.edu"},
    {name="Jiahua Liao", email="jl11844@nyu.edu"},
    {name="Kevin Lin", email="kl3890@nyu.edu"},
    {name="Nicole Luzuriaga", email="nl2210@nyu.edu"}
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["python", "package", "build", "text-based", "choose-your-adventure"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/software-students-spring2024/3-python-package-exercise-namelessss"
"Repository" = "https://github.com/software-students-spring2024/3-python-package-exercise-namelessss.git"
"Bug Tracker" = "https://github.com/software-students-spring2024/3-python-package-exercise-namelessss/issues"

[project.scripts]
new_york_minute = "new_york_minute.__main__:main"