[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.setuptools]
name = "new_york_minute"
version = "1.1.0"
author = "Hannah Horiuchi, Jiahua Liao, Kevin Lin, Nicole Luzuriaga"
author_email = "hah8236@nyu.edu, jl11844@nyu.edu, kl3890@nyu.edu, nl2210@nyu.edu"
description = "A text-based game set in New York City"
long_description = "file: README.md"
long_description_content_type = "text/markdown"
url = "https://github.com/software-students-spring2024/3-python-package-exercise-namelessss"
packages = ["new_york_minute"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]