[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "new_york_minute"
version = "0.1.0"
authors = [
    {name = "Hannah Horiuchi", email = "hah8236@nyu.edu"},
    {name = "Jiahua Liao", email = "jl11844@nyu.edu"},
    {name = "Kevin Lin", email = "kl3890@nyu.edu"},
    {name = "Nicole Luzuriaga", email = "nl2210@nyu.edu"}
]
description = "A text-based game set in New York City"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[project.urls]
"Homepage" = "https://github.com/software-students-spring2024/3-python-package-exercise-namelessss"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]